projects/compiler/test/parser/map_error_no_colon.out
Error at %FILE_NAME%:1:7
Unexpected token 'int', expected ':':
  |  { abc 1 }
           ^